Gestione fattura elettronica

--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -168,6 +168,7 @@ it:
             email:
               blank: "è obbligatoria"
               invalid: "non è valida"
+          required: "è richiesto"
         
         vehicle:
           attributes:
